# nutritious-web-python

./: README.md  pyproject.toml
.github/workflows/: main.yml
app/: example.py
nutritious/: __init__.py  __main__.py
